# tfl-validator

./: .gitignore  LICENSE  README.md  demo.html  demo.py  portal.html  pro_study_config.xlsx  pyproject.toml  requirements.txt  study_config.xlsx
examples/: README.md  TFL_Validation_Report_EXAMPLE.xlsx
sample_data/: adae.csv  adpd.csv  adrs.csv  adsl.csv  adtte.csv
sample_data/pro_data/: cdp_admh.csv  cdp_adrs.csv  cdp_adsl.csv  cdp_adtte.csv
sample_data/pro_tfls/: L16.2.5.1_medhist_listing.docx  L16.2.7.1_TEAE_listing.docx  L16.2.7.2_SAE_listing.docx  L16.2.7.3_deaths_listing.docx  L16.2.8.1_conmeds_listing.docx  T14.1.1_demographics.docx  T14.1.2_disposition.docx  T14.2.1_exposure_summary.docx  T14.3.1_AE_summary.docx  T14.3.2_AE_SOC_PT.docx  T14.3.3_SAE.docx  T14.3.4_AE_severity.docx  T14.4.1_lab_summary.docx  T14.4.2_vitals_summary.docx  T14.5.1_conmeds_summary.docx  T14.5.2_medhist_summary.docx
sample_data/sample_tfls/: L16.2.7.1_AE_listing.docx  L16.2.7.2_SAE_listing.docx  L16.2.7.3_deaths_listing.docx  L16.2.7.4_response_listing.docx  L16.2.7.5_protocol_deviations.docx  T14.1.1_demog.docx  T14.1.2_disposition.docx  T14.2.1_extent_exposure.docx  T14.3.1_AE_summary.docx  T14.3.2_AE_grade.docx  T14.3.3_SAE.docx  T14.4.1_lab_hematology.docx  T14.5.1_vital_signs.docx  T14.7.1_efficacy_orr.docx  T14.7.2_pfs.docx
tests/: test_basic.py
tfl_validator/: __init__.py  cli.py  config_loader.py  core.py
tfl_validator/engine/: __init__.py  audit_logger.py  comparator.py
tfl_validator/parsers/: __init__.py  adam_specs_reader.py  docx_parser.py  lst_parser.py  pdf_parser.py  protocol_sap_parser.py
tfl_validator/report/: excel_report.py
tfl_validator/rules/: __init__.py  tfl_type_rules.py
tfl_validator/stats/: __init__.py  conmeds.py  descriptive.py  exposure.py  inferential.py  lab.py  medhist.py  safety.py  survival.py  vitals.py
tfl_validator/validators/: __init__.py  _utils.py  conmeds.py  demographics.py  disposition.py  exposure.py  lab.py  listing.py  medhist.py  placeholder.py  safety_ae.py  survival.py  vitals.py
